--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://famchat.onrender.com/",
+  "homepage": "https://fammchat.netlify.app/",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
